fixed image spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 body {
@@ -145,29 +146,29 @@ footer {
 /* Portfolio Page*/
 
 #gallery {
+
   margin: 0;
   padding: 0;
-  list-style: none;
-  display: inline-block;
+  display: block;
   overflow: auto;
 }
 
-#gallery li {
-    margin: 5px;
-    padding: 5px;
-    width: 5px;
-    height: 20px;
+.gallery-image {
+    width: 40%;
+    margin-right: 0;
+    padding: 0;
+    display: inline;
+}
+
+.gallery-image img {
+    padding: 0;
+    width: 40%;
+    height: 100%;
+}
+
+.gallery-image p {
+    padding: 10px;
     width: 45%;
-    display: inline-block;
-    position: relative;
-}
-
-#gallery li a {
-  text-decoration: none;
-}
-
-#gallery li a p {  
-    padding: 25px;
     text-align: center;
     background-color: #4aaaa5;
     color: #ffffff;
